--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,10 +5,9 @@
 		id="sap-ui-bootstrap"
 		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_belize"
-		data-sap-ui-libs="sap.m"
 		data-sap-ui-compatVersion="edge"
 		data-sap-ui-async="true"
-        data-sap-ui-onInit="module:sap/ux402/ui5/index"
+        data-sap-ui-onInit="module:sap/ui/core/ComponentSupport"
         sap-ui-componentPreload="off"
 		data-sap-ui-resourceroots='{
 			"sap.ux402.ui5": "./"
@@ -16,4 +15,5 @@
     </script>
 </head>
 <body class="sapUiBody" id="content">
+    <div data-sap-ui-component data-name="sap.ux402.ui5" data-id="container" data-settings='{"id":"sap.ux402.ui5"}'></div>
 </body>
